--- a/products/gearpump/hypump_bkp0.5b1.html
+++ b/products/gearpump/hypump_bkp0.5b1.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html><!-- InstanceBegin template="/Templates/product.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/product.dwt" codeOutsideHTMLIsLocked="false" --><!-- InstanceBeginEditable name="EditTitle1" --><title>BKP0.5B1 gear pump</title><!-- InstanceEndEditable -->
 <head>
 <meta charset="utf-8">
-<title>Welcome to hydraumech.com</title>
 <script type="text/javascript" language="JavaScript1.2" src="../../script/stlib.js"></script>
 <link rel="SHORTCUT ICON" href="../../favicon.ico">
 <link rel="BOOKMARK" href="../../favicon.ico">
@@ -41,6 +40,18 @@ body,td,th {
 h1,h2,h3,h4,h5,h6 {
 	font-style: normal;
 	font-weight: normal;
+}
+    a:link {
+    text-decoration: none;
+}
+a:visited {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+}
+a:active {
+    text-decoration: none;
 }
     </style>
 <script type="text/javascript" src="../../engine1/jquery.js"></script>
@@ -575,6 +586,7 @@ stEM();
 </script>
 &nbsp;</td>
             <td width="85%" align="left" valign="top"><!-- InstanceBeginEditable name="EditRegion2" -->
+              <p><b><font color="#000000"><span class="STYLE8"><a href="../../index.html" target="_self"><strong>Home</strong></a><strong>-&gt;<a href="../../products.html" target="_parent">P</a><a href="../../products.html" target="_self">roducts</a>-&gt;<a target="_self" href="../../left-hypumps.html">Hydraulic pumps</a>-<a target="_self" href="hypump_bkp0.5 code.html">&gt;BKP0.5</a>:</strong></span></font></b></p>
               <p><b><font color="#000000">BKP0.5B1 Gear Pump:</font></b></p>
               <p><a href="hypump_CBD-F3.jpg" target="_blank"><img src="img/BKP0.5B1%20spec.jpg" alt="pump" width="730" height="585" hspace="0" vspace="0" border="0" align="middle"></a></p>
               <table width="90%" border="1" cellpadding="0" cellspacing="0" bordercolor="#000000">
